# wc2026

./: .gitignore  FINDINGS.md  GAPS.md  README.md  bayesian_ablation.py  bayesian_tau_ablation.py  blend_weight_fit.py  cli.py  com.wc2026.daily.plist  demo.py  draw_pick_calibration.py  fatigue_ablation.py  fetch_data.py  forecast.py  fusion_validate.py  goals_recalibration.py  index.html  injury_scenario.py  install_daily.sh  intelligence_report.py  predict.py  probe.py  publish.sh  pyproject.toml  report.py  requirements-lock.txt  run_daily.sh  sbc_validate.py  score_backtest.py  score_live.py  shootout_ablation.py  stage_reliability.py  state_space_sweep.py  tournament_backtest.py  track-record.json  tune_halflife.py  xg_ablation.py  xg_form_ablation.py  xg_joint_ablation.py  xg_rating_ablation.py  (+1 more)
.github/workflows/: ci.yml
data/raw/: wc2026_bracket.txt  wc2026_injuries.example.txt  wc2026_injuries.suggested.txt  wc2026_injuries.txt  wc2026_stars.txt
src/wc2026/: __init__.py  config.py
src/wc2026/collective/: api_football.py  availability.py  market.py  odds_api.py  odds_movement.py  sentiment.py  social.py
src/wc2026/data/: apifootball_xg.py  loaders.py  squads.py  statsbomb.py  synthetic.py  teams.py  transfermarkt_values.py  venues.py
src/wc2026/evaluate/: ablation.py  calibration.py  conditional_calibration.py  metrics.py  pick.py  sbc.py  score.py  stage_reliability.py  (+1 more)
tests/: test_free_gaps.py  test_lane1.py  test_lane2.py  test_lane3.py  test_lane_sim.py  test_live_dashboard.py  test_pick.py  test_scores.py  test_spine.py  test_track.py
(+23 files in other folders)
